- Support using StringRef in Action 0x14 (`SetProperties`).
- Support using StringRef as `NewGRF` `name` and `description`.
- Support encoding of bridge layouts.
- Support encoding of industry layouts.
- Support encoding of tile acceptance lists for houses and industry tiles.
- Support expressions for register value in PERM and TEMP access.
- SUpport parameter expressions for vars60+ in `Switch` code (via var7b).
- Add `preferred_blitter` argument to `NewGRF` constructor, possible values `NewGRF.BLITTER_BPP_8` and `NewGRF.BLITTER_BPP_32`.
- Add `StringManager.get_persistent_id` function to register strings in "persistent" range (0xDCxx).
- Add `Sprite.save_gif` method to generate palette animated images.
- Add init_id_map command line command to initialize id_map.json.
- Add `Date` type to represent dates that don't fit into `datetime.date`.
- Start auto-assiged IDs from 0 for INDUSTRY_TILE feature.
- Remove `Mask` offset, add `FileMask` absolute positioning.
- Rename `AlternativeSprites.get_zoom` to `get_sprite` and add bpp argument.
- Rename some of the Action0 properties for `CARGO` to match nml.
- Don't write redundant actions for railtypes without fallbacks in railtype table.
- Return cargo type ids in `NewGRF.set_cargo_table`.

- lib: Fix `CallbackManager.make_switches` for non-vehicle features.
- lib: Fix incorrect 2cc colors for auto-articulated parts.
- lib: Fix unicode vehicle names.
- lib: Set correct flags and track_type on auto-articulated parts.
- lib: Add high-level `Industry` class.
- lib: `CallbackManager` rewrite:
	- Support all features (non-vehicles may still be incomplete).
	- Make `CallbackManager` abstract class, use `make_callback_manager` function instead.
	- Support splitting callbacks for default and purchase branch with `DualCallback`.
	- Use `graphics.purchase` instead of `purchase_graphics` attribute.
- lib: Add `Ship.Flags` and `RoadVehicle.Flags` for unified access to flags.
- lib: Add `EngineOverride` sprite generator.